revert few changes